// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > should fire Select when Select option 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="selectInputContainer selectInputKindPrimary"
    >
      <select
        data-testid="test-my-select-select"
        id="my-select"
        name="my-select"
      >
        <option
          value="option-1"
        >
          Option 1
        </option>
        <option
          value="option-2"
        >
          Option 2
        </option>
        <option
          value="option-3"
        >
          Option 3
        </option>
      </select>
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down selectIcon"
        color="black"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select > should render a Select with default props 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="selectInputContainer selectInputKindPrimary"
    >
      <select
        data-testid="test-my-select-select"
        id="my-select"
        name="my-select"
      />
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down selectIcon"
        color="black"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Select > should render a Select with disabled props 1`] = `
<div>
  <div
    class="inputContainer"
  >
    <div
      class="selectInputContainer selectInputKindPrimary"
    >
      <select
        data-testid="test-my-select-select"
        disabled=""
        id="my-select"
        name="my-select"
      />
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-chevron-down selectIcon"
        color="black"
        data-icon="chevron-down"
        data-prefix="fas"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M233.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L256 338.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;
